--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
-    "routes": [
-      { "src": "/static/(.*)", "dest": "/static/$1" },
-      { "src": "/(.*)", "dest": "/index.html" }
+    "rewrites": [
+      {
+        "source": "/(.*)",
+        "destination": "/index.html"
+      }
     ]
   }
-  
