--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "private": true,
+  "homepage": ".",
   "scripts": {
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
