--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,15 @@
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
-  }
+    "version": 2,
+    "builds": [
+        {
+            "src": "build",
+            "use": "@vercel/static-build"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/index.html"
+        }
+    ]
+}
