--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
     "react-paginate": "^8.2.0",
     "react-photoswipe-gallery": "^2.2.7",
